# Cloud-Native-IoT

./: .gitignore  README.md
.github/workflows/: sphinx.yml
Module-01/: compose.yml
Module-02/: compose.yml
Module-02/project/: README.md
Module-03/: Dockerfile  compose.yml
Module-03/project/: README.md  requirements.txt
Module-04/: compose.yml
Module-05/: Dockerfile  compose.yml
Module-05/config/: jupyter_server_config.py
Module-05/dockerfiles/: Dockerfile  requirements.txt
Module-06/: README.md
Module-06/FAIR/: Dockerfile  compose.yml
Module-06/LLM/: compose.yml
Module-06/ROS/: compose.yml
Module-06/YOLO/: compose.yml
Module-06/openai-gym/: Dockerfile
docs/: README.md  conf.py  index.rst  pyproject.toml  requirements.txt
docs/_static/css/: custom.css
docs/containers/: index.rst
docs/labs/: index.rst
docs/microcontrollers/: index.rst  rtos.rst
docs/networking/: communication-patterns.rst  index.rst
docs/notes/: index.rst
docs/notes/basics/: computer-architecture.rst  digital-design.rst  index.rst  math.rst  remote-sensing.rst  signal-processing.rst  unix.rst
docs/notes/containers/: docker-guide.rst  index.rst  practical-docker-guide.rst
docs/notes/containers/orchestration/: docker-swarm.rst  index.rst  kubernetes.rst
docs/notes/data-management/: index.rst
docs/notes/machine-learning/: classifier.ipynb  clustering.ipynb  index.rst  mnist.ipynb  nmist.ipynb
docs/notes/microcontrollers/: esp32.rst  index.rst
docs/notes/networking/: index.rst
docs/source/: conf.py  index.rst
docs/source/containers/: index.rst
(+34 files in other folders)
