[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.12.9",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "tox>=4.28.4",
    "myst-nb",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "seaborn",
    "sphinx-tabs>=3.4.7",
    "sphinx-copybutton>=0.5.2",
    "jupyterlab>=4.4.10",
]

[tool.setuptools]
py-modules = []

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "type"]

[tool.tox.env.docs]
description = "Builds sphinx documentation"
commands = [[ "make", "html" ]]

[tool.tox.env_run_base]
allowlist_externals = ["make"]
